feat: add documentation for rent
