# controller/rent_controller.go
@@ -15,6 +15,19 @@ type RentController struct {
 	repository.RentRepo
 }
 
+// RentBook godoc
+// @Summary Rent a book [ONLY FOR USER]
+// @Description Rent a book in a library, 1-30 days
+// @Tags Rents
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Param student body models.RentRequest true "Books to rent"
+// @Success 200 {object} models.RentResponse
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/rent [post]
 func (s *RentController) RentBook(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "user" {
@@ -41,6 +54,18 @@ func (s *RentController) RentBook(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{"Message": "Book Rent", "Books": resp})
 }
 
+// MyRentHistory godoc
+// @Summary History of rented book [ONLY FOR USER]
+// @Description List of books those rented by user (already returned)
+// @Tags History
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Success 200 {array} models.RentHistory
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/history/rent [get]
 func (s *RentController) MyRentHistory(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "user" {
@@ -55,6 +80,18 @@ func (s *RentController) MyRentHistory(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{"Message": "History of Book Rented", "Books": resp})
 }
 
+// MyRentedBooks godoc
+// @Summary List of rented book [ONLY FOR USER]
+// @Description List of books those rented by user (not returned yet)
+// @Tags Rents
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Success 200 {array} models.RentedResponse
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/rents [get]
 func (s *RentController) MyRentedBooks(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "user" {
@@ -69,6 +106,19 @@ func (s *RentController) MyRentedBooks(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{"Message": "Book that is still renting", "Books": resp})
 }
 
+// DetailRentedBook godoc
+// @Summary Detail of rented book [ONLY FOR USER]
+// @Description Detail of a book that rented by user (not returned yet)
+// @Tags Rents
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Param id path string true "Rent ID"
+// @Success 200 {objcect} models.RentedResponse
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/rent/{id} [get]
 func (s *RentController) DetailRentedBook(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "user" {
@@ -89,6 +139,19 @@ func (s *RentController) DetailRentedBook(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{"Message": "Book that is still renting", "Books": resp})
 }
 
+// ReturnBookCash godoc
+// @Summary Return book by rent id [ONLY FOR USER]
+// @Description Return book by rent id and payment using cash
+// @Tags Rents
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Param id path string true "Rent ID"
+// @Success 200 {objcect} models.ReturnBook
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/rent/return_cash/{id} [post]
 func (s *RentController) ReturnBookCash(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "user" {
@@ -110,6 +173,20 @@ func (s *RentController) ReturnBookCash(c echo.Context) error {
 
 }
 
+// ReturnBookVA godoc
+// @Summary Return book by rent id [ONLY FOR USER]
+// @Description Return book by rent id and payment using virtual account
+// @Tags Rents
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Param student body models.RentPayment true "Payment method (VA) and Bank Code, BRI, BNI, MANDIRI"
+// @Param id path string true "Rent ID"
+// @Success 200 {objcect} models.ReturnBookVA
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/rent/return_va/{id} [post]
 func (s *RentController) ReturnBookVA(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "user" {
