# docs/swagger.yaml
@@ -66,6 +66,65 @@ definitions:
       rent_by:
         type: string
     type: object
+  models.RentHistory:
+    properties:
+      book_id:
+        type: integer
+      days_rented:
+        type: integer
+      rent_at:
+        type: string
+      rent_id:
+        type: integer
+      returned_at:
+        type: string
+      total_price:
+        type: number
+    type: object
+  models.RentPayment:
+    properties:
+      bank_code:
+        type: string
+      payment_method:
+        type: string
+    type: object
+  models.RentRequest:
+    properties:
+      book_id:
+        type: integer
+      days:
+        type: integer
+      rent_at:
+        type: string
+    type: object
+  models.RentResponse:
+    properties:
+      book_id:
+        type: integer
+      deadline:
+        type: string
+      rent_at:
+        type: string
+      rent_id:
+        type: integer
+      rent_status:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  models.RentedResponse:
+    properties:
+      book_id:
+        type: integer
+      deadline:
+        type: string
+      rent_at:
+        type: string
+      rent_id:
+        type: integer
+      rent_status:
+        type: string
+    type: object
   models.TopUpReq:
     properties:
       deposit:
@@ -399,6 +458,259 @@ paths:
       summary: Get all unavailable books [ONLY FOR USER]
       tags:
       - Books
+  /api/history/rent:
+    get:
+      consumes:
+      - application/json
+      description: List of books those rented by user (already returned)
+      parameters:
+      - default: ""
+        description: Authentication token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.RentHistory'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: History of rented book [ONLY FOR USER]
+      tags:
+      - History
+  /api/rent:
+    post:
+      consumes:
+      - application/json
+      description: Rent a book in a library, 1-30 days
+      parameters:
+      - default: ""
+        description: Authentication token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Books to rent
+        in: body
+        name: student
+        required: true
+        schema:
+          $ref: '#/definitions/models.RentRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.RentResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Rent a book [ONLY FOR USER]
+      tags:
+      - Rents
+  /api/rent/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Detail of a book that rented by user (not returned yet)
+      parameters:
+      - default: ""
+        description: Authentication token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Rent ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: objcect
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Detail of rented book [ONLY FOR USER]
+      tags:
+      - Rents
+  /api/rent/return_cash/{id}:
+    post:
+      consumes:
+      - application/json
+      description: Return book by rent id and payment using cash
+      parameters:
+      - default: ""
+        description: Authentication token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Rent ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: objcect
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Return book by rent id [ONLY FOR USER]
+      tags:
+      - Rents
+  /api/rent/return_va/{id}:
+    post:
+      consumes:
+      - application/json
+      description: Return book by rent id and payment using virtual account
+      parameters:
+      - default: ""
+        description: Authentication token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Payment method (VA) and Bank Code, BRI, BNI, MANDIRI
+        in: body
+        name: student
+        required: true
+        schema:
+          $ref: '#/definitions/models.RentPayment'
+      - description: Rent ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: objcect
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Return book by rent id [ONLY FOR USER]
+      tags:
+      - Rents
+  /api/rents:
+    get:
+      consumes:
+      - application/json
+      description: List of books those rented by user (not returned yet)
+      parameters:
+      - default: ""
+        description: Authentication token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.RentedResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: List of rented book [ONLY FOR USER]
+      tags:
+      - Rents
   /api/user:
     get:
       consumes:
